[package]
name = "main"
version = "0.1.0"
edition = "2024"

[build-dependencies]
winres = "0.1"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prettytable = "0.10"   # for tables
colored = "3.0"        # for coloring text
crossterm = "0.29"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
dialoguer = "0.12"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }
